--- a/_posts/2013-12-24-中文測試.md
+++ b/_posts/2013-12-24-中文測試.md
@@ -30,6 +30,4 @@ def show
 end
 {% endhighlight %}
 
-<video width="320" height="240" controls>
-  <source type="video/mp4" src="https://robocop79.github.io/Websiteland//Twitter/FLT.mp4">
-</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bNKwyn3p1Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
