--- a/_posts/2013-12-24-中文測試.md
+++ b/_posts/2013-12-24-中文測試.md
@@ -32,4 +32,4 @@ end
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bNKwyn3p1Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe src="//player.bilibili.com/player.html?aid=298565914&bvid=BV1YF411u7HW&cid=589112068&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=298565914&bvid=BV1YF411u7HW&cid=589112068&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
