--- a/_posts/2013-12-24-中文測試.md
+++ b/_posts/2013-12-24-中文測試.md
@@ -20,7 +20,7 @@ This is a Chinese test post.
 
 *From [亂數假文產生器 - Chinese Lorem Ipsum](http://www.richyli.com/tool/loremipsum/)*
 
-{% highlight ruby %}
+```ruby
 def show
   @widget = Widget(params[:id])
   respond_to do |format|
@@ -28,7 +28,8 @@ def show
     format.json { render json: @widget }
   end
 end
-{% endhighlight %}
+```
+
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bNKwyn3p1Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
