--- a/_posts/2013-12-24-中文測試.md
+++ b/_posts/2013-12-24-中文測試.md
@@ -31,6 +31,6 @@ end
 ```
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bNKwyn3p1Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=298565914&bvid=BV1YF411u7HW&cid=589112068&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<div style="position: relative; padding: 30% 45%;">
+<iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="https://player.bilibili.com/player.html?cid=145147963&aid=84267566&page=1&as_wide=1&high_quality=1&danmaku=0" frameborder="no" scrolling="no"></iframe>
+</div>
