--- a/_data/languages/zh-Hans.yml
+++ b/_data/languages/zh-Hans.yml
@@ -78,14 +78,14 @@ search:
   placeholder: 搜索...
 
 cheers:
-  um: 嗯..
+  um: 
   ok: OK
   nice: 好
   good: 很好
   great: 非常好
   excellent: 太棒了
 
-keep_on: 继续努力。
+keep_on: 
 
 symbol:
   comma: '， '
