--- a/_posts/2019-07-01-密度估计的非参数方法.md
+++ b/_posts/2019-07-01-密度估计的非参数方法.md
@@ -54,7 +54,7 @@ $V$的估计：
 （2）收敛的条件是：a). ${lim \atop {n->\infty}} V_n=0$, b). ${lim \atop {n->\infty}} k_n = \infty$, c). ${lim \atop {n->\infty}} \frac{k_n}{n}=0$。即要求样本无穷多，小窗体积无穷小，每个小窗里的点无穷多，但相对总样本的比例无穷小。这个要求导致小窗的选取要与样本数、样本分布都有关，非常不方便。
 （3）由于概率分布有高密度区域和低密度区域，也很有可能小窗数会相对高密度区域过小，相对低密度区域又过大
 
-![直方图法][1]
+![直方图法](/assets/images/2019-07-01-密度估计的非参数方法.md/1.png)
 
 ### 3.2. $k_N$近邻估计法
 **方法**：
@@ -101,12 +101,9 @@ k(x_,x_i) = \begin{cases}
 
 从样本的角度，每个样本点以一个“窗函数”的形式对定义域里的所有位置产生影响，当然像方窗这样设定阈值，阈值之外贡献都是0的例子也有。下图示意的是高斯窗的场景。
 
-![此处输入图片的描述][2]
+![此处输入图片的描述](/assets/images/2019-07-01-密度估计的非参数方法.md/2.png)
 
 **优缺点**：
 每一个位置的pdf估计都用上了所有样本的信息，是这几种方法里最有效利用了信息的一个。窗函数及其参数选的好，可以保证pdf的连续性，甚至用很小的样本量就学到非常逼近的pdf。
 
 但是窗函数的选取其实应该包含着使用者对pdf的某种假设，这与非参数学习的思想不是特别契合。
-
-  [1]: https://img-blog.csdn.net/20150824102804756
-  [2]: http://static.oschina.net/uploads/img/201406/13121942_M5IU.jpg
