--- a/_posts/2019-07-04-线性分类器1.md
+++ b/_posts/2019-07-04-线性分类器1.md
@@ -42,7 +42,7 @@ $$
 - [Logistic Regression](to.be.continue)可以解决上述两个问题
 - [**it corresponds to maximum likelihood under the assumption of a Gaussian conditional distribution**](to.be.continue)
 
-![image.png-134.1kB][1]
+![image.png-134.1kB](/assets/images/2019-07-04-线性分类器1.md/1.png)
 该图展示了MSE对outlier敏感的特点，左右两张图中，绿线是Logistic regression的结果，紫线是MSE的结果
 
 
@@ -80,7 +80,7 @@ $$\mathbf{w}=-\lambda (\mathbf{m _ { 2 }}-\mathbf{m _ { 1 }})^{\mathrm{T}}\mathb
 
 即$\mathbf{S}_{\mathrm{W}}^{-1}\left(\mathbf{m}_{2}-\mathbf{m}_{1}\right)$ 是FLD的一个解
 
-![image.png-92kB][2]
+![image.png-92kB](/assets/images/2019-07-04-线性分类器1.md/2.png)
 FLD示意图，对于同一批数据，显然右图的降维方式会使得数据在低维空间更可分
 
 **需要注意：**
@@ -122,7 +122,7 @@ $$
 ![感知机示意图](https://upload.wikimedia.org/wikipedia/commons/8/8c/Perceptron_moj.png)
 该图示意感知机的判别机制
 
-![image.png-136.7kB][3]
+![image.png-136.7kB](/assets/images/2019-07-04-线性分类器1.md/3.png)
 该图示意感知机的迭代收敛过程
 
 **需要注意：**
@@ -134,7 +134,3 @@ $$
 - 线性可分的数据可能有多个解，具体感知机会收敛到哪一个，取决于初值的设定（神经网络黑盒子的毛病已经初见端倪）
 - 感知机出现的几乎同时，还有一个叫 *adaline* 的算法，模型和感知机几乎一样，但是迭代策略有所不同
 
-
-  [1]: http://static.zybuluo.com/pluto-the-lost/q3hxubcvn90q59o77w45736m/image.png
-  [2]: http://static.zybuluo.com/pluto-the-lost/bd8hnml6a0gmmfu5xaub44uf/image.png
-  [3]: http://static.zybuluo.com/pluto-the-lost/i1swy3zccvfz8nuxwww6cvm1/image.png
