--- a/_posts/2019-07-08-线性分类器2.md
+++ b/_posts/2019-07-08-线性分类器2.md
@@ -18,14 +18,14 @@ tags: [pattern-recognition, machine-learning]
 
 在[上一篇文章](https://www.zybuluo.com/pluto-the-lost/note/1507124)介绍的感知机算法中，损失函数 ($E_{\mathrm{P}}(\mathbf{w})=-\sum_{n \in \mathcal{M}} \mathbf{w}^{\mathrm{T}} \boldsymbol{\phi}_{n} t_{n}$) 是分类错误样本的判别式之和。如果一个样本是线性可分的，则可能**存在无数个超平面使得样本分类完全正确**，它们对应的损失函数都是0，因此感知机算法无法再迭代更新，最后收敛于这无数超平面中的哪一个，仅取决于初值的设定。
 
-![很多个可能的分类超平面][1]
+![很多个可能的分类超平面](/assets/images/2019-07-08-线性分类器2.md/1.png)
 $L_2, L_3$ 都是完美分类的超平面
 
 但我们可能会想在这所有的“**正确**”超平面里，选出“**最好**”的一个。首先我们来定义“最好”：既然这些超平面在训练集上的误差都是0，没有区别，我们就考虑它们在测试集上的误差，也就是**[模型的泛化能力](to.be.continue)（generalization ability）**。
 
 直观上我们会认为，**样本点离分类超平面越远越好**，因为离得越远，样本的随机噪声带来的扰动就越不可能把样本扰动到超平面另一边去。用数学描述的话，就是离分类超平面最近的样本点，其到超平面的垂线长度要尽可能短。这个距离我们称为“**边界 (margin)**”，这个定义下的最优线性分类器就叫**最大边界分类器 (maximum margin classifier)**。
 
-![image_1df6flb3113oekd211nm17kn1503n.png-123.8kB][2]
+![image_1df6flb3113oekd211nm17kn1503n.png-123.8kB](/assets/images/2019-07-08-线性分类器2.md/2.png)
 比起B，很多人应该更喜欢A，因为A看起来“留有余地”
 
 一个样本点离超平面的距离是这么算的
@@ -100,14 +100,10 @@ $$
 
  $\widetilde{L}(\mathbf{a})$ 和 $\mathbf{w}$ 不会变化，从 $a_{n}\left(t_{n} y\left(\mathbf{x}_{n}\right)-1+\xi_{n}\right)$ 这个式子可以看出，结果仍然只和支持向量有关，但支持向量变成边界上的，以及越过边界的所有样本
 
-![image.png-31.6kB][3]
+![image.png-31.6kB](/assets/images/2019-07-08-线性分类器2.md/3.png)
 允许样本越过边界的SVM，边界大小与越界惩罚的重要性用参数 $C$ 来调节
 
 
 ## **2. Logistic Regression**
 
 ## **3. multi-class classification**
-
-  [1]: https://www.learnopencv.com/wp-content/uploads/2018/07/support-vector-machine.png
-  [2]: http://static.zybuluo.com/pluto-the-lost/lvx0tvfnnsdfcmw2fr35r0us/image_1df6flb3113oekd211nm17kn1503n.png
-  [3]: http://static.zybuluo.com/pluto-the-lost/ma93psz8kanil5b8rafq6kk7/image.png
