--- a/_posts/2019-07-10-多臂赌博机.md
+++ b/_posts/2019-07-10-多臂赌博机.md
@@ -22,7 +22,9 @@ tags: [reinforcement-learning]
 
 图0：多臂赌博机（都找不到高清的示意图，难受）
 
-如果每个赌博机的概率分布都知道，那其实这个问题很简单，就是**每一步都选择期望最高的那个赌博机**。你现在并不知道，但可以去估计，在任意时间点，你会对每个赌博机的奖励期望有一个**估计值**$q_{*}(a) \doteq \mathbb{E}\left[R_{t} | A_{t}=a\right]$，这个值也叫**价值函数**$Q_t(a)$。
+如果每个赌博机的概率分布都知道，那其实这个问题很简单，就是**每一步都选择期望最高的那个赌博机**。你现在并不知道，但可以去估计，在任意时间点，你会对每个赌博机的奖励期望有一个**估计值**$q_{*}(a) \doteq \mathbb{E}\left[R_{t} \| A_{t}=a\right]$，这个值也叫**价值函数**$Q_t(a)$。
+
+<!-- 上面这段的公式有个竖线，正常的markdown输入公式应该直接打一个竖线就可以，\|是双竖线，但是jekyll的编译很奇怪，它会把公式里的单个竖线理解成表格分列…… -->
 
 如果你这个时间点的决策选取的是**奖励期望最大的**那个赌博机，那么这个动作叫**贪心动作**(greedy actions)，做出这样的动作叫**开发**(exploiting)，是**在已知知识下获得最大奖励**的动作。反之，如果你不做贪心动作，这个叫**探索**(exploring)，它虽然牺牲了一部分奖励，但有助于更好地估计整个模型，或许会**有利于长期的奖励**。RL里一个很基本的矛盾就是**开发-探索矛盾(exploting-exploring conflict)**。
 
