--- a/_posts/2019-07-01-密度估计的非参数方法.md
+++ b/_posts/2019-07-01-密度估计的非参数方法.md
@@ -45,12 +45,13 @@ $V$的估计：
 
 **优缺点**：
 优点：
-（1）最简单直观，也是日常用得最多的
-（2）理论上，当样本量趋于无穷多，$\hat p(x)$可以收敛于$p(x)$
++ 最简单直观，也是日常用得最多的
++ 理论上，当样本量趋于无穷多，$\hat p(x)$可以收敛于$p(x)$
+
 缺点：
-（1）小窗数的选择影响很大，选择过小会导致估计的pdf非常粗糙，选择过大会导致有一些小窗内没有样本或者样本很少，使得估计的pdf很不连续
-（2）收敛的条件是：a). ${lim \atop {n->\infty}} V_n=0$, b). ${lim \atop {n->\infty}} k_n = \infty$, c). ${lim \atop {n->\infty}} \frac{k_n}{n}=0$。即要求样本无穷多，小窗体积无穷小，每个小窗里的点无穷多，但相对总样本的比例无穷小。这个要求导致小窗的选取要与样本数、样本分布都有关，非常不方便。
-（3）由于概率分布有高密度区域和低密度区域，也很有可能小窗数会相对高密度区域过小，相对低密度区域又过大
++ 小窗数的选择影响很大，选择过小会导致估计的pdf非常粗糙，选择过大会导致有一些小窗内没有样本或者样本很少，使得估计的pdf很不连续
++ 收敛的条件是：a). ${lim \atop {n->\infty}} V_n=0$, b). ${lim \atop {n->\infty}} k_n = \infty$, c). ${lim \atop {n->\infty}} \frac{k_n}{n}=0$。即要求样本无穷多，小窗体积无穷小，每个小窗里的点无穷多，但相对总样本的比例无穷小。这个要求导致小窗的选取要与样本数、样本分布都有关，非常不方便。
++ 由于概率分布有高密度区域和低密度区域，也很有可能小窗数会相对高密度区域过小，相对低密度区域又过大
 
 ![直方图法](/assets/images/2019-07-01-密度估计的非参数方法.md/1.png)
 
