--- a/_posts/2019-07-10-多臂赌博机.md
+++ b/_posts/2019-07-10-多臂赌博机.md
@@ -5,7 +5,7 @@ categories: blogs
 tags: [reinforcement-learning]
 ---
 
-## 1. **多臂赌博机**(Multi-armed Bandits)
+**多臂赌博机**(Multi-armed Bandits)
 
 ### 1.1 问题描述
 强化学习和监督学习的最大区别是，对于一个动作，**RL给出的是评估(evaluation)，而SL给出的是判断或者说指导(instruction)**。意思是说，RL通过价值函数告诉你这个动作有多好，而并不告诉你这个动作是最好的或最差的，SL正相反，他会告诉你哪个动作是正确的。当然也有一些情况，评估和指导可以联合起来训练模型，但是这里我们先**用多臂赌博机来展示一下RL“给出评估”的特点**，**同时也展示一些最基本的RL方法**。
