--- a/_posts/2018-05-09-linux.md
+++ b/_posts/2018-05-09-linux.md
@@ -636,16 +636,15 @@ systemctl stop firewalld
 systemctl disable firewalld
  
 #禁止 selinux。 
+
+yum -y install nfs-utils 
  
  
+systemctl start rpcbind 
+systemctl enable rpcbind 
  
-[root@www ~]# yum -y install nfs-utils 
- 
- 
-[root@www ~]# systemctl start rpcbind 
-[root@www ~]# systemctl enable rpcbind 
- 
-[root@www ~]# vi /etc/fstab 
+vi /etc/fstab 
+# add follows to the end
 /dev/mapper/centos-root /                       xfs     defaults        1 1
 UUID=a18716b4-cd67-4aec-af91-51be7bce2a0b /boot xfs     defaults        1 2
 /dev/mapper/centos-swap swap                    swap    defaults        0 0
@@ -653,27 +652,60 @@ UUID=a18716b4-cd67-4aec-af91-51be7bce2a0b /boot xfs     defaults        1 2
 # add like follows to the end
 192.168.1.99  :/home  /home                   nfs     defaults        0 0
  
+# storage service at start
+yum -y install autofs 
  
-[root@www ~]# yum -y install autofs 
- 
-[root@www ~]# vi /etc/auto.master 
+vi /etc/auto.master 
 # add follows to the end
 /-    /etc/auto.mount
  
- 
-[root@www ~]# vi /etc/auto.mount 
+vi /etc/auto.mount 
 # create new : [mount point] [option] [location]
- 
+# add follows to the end
 /home -fstype=nfs,rw  192.168.1.99:/home
  
- 
- 
- [root@www ~]# systemctl start autofs 
- [root@www ~]# systemctl enable autofs
+systemctl start autofs 
+systemctl enable autofs
 
-
-
-
-
+# in every local machine
 mount -t nfs 192.168.1.99:/home /stor
 ```
+
+# ssh私钥认证 + 随机密码
+
+* 设置无密码登录
+    * 在本机：
+    ```bash
+    # 进入~/.ssh
+    ssh-keygen -b 1024 -t rsa -f id_rsa -P ""
+    # 会在~/.ssh/下生成“id_rsa”和“id_rsa.pub”两个文件
+    
+    # 把"id_rsa.pub"放到目标服务器的~/.ssh/authorized_keys里，可以用以下命令，也可以自己新建文件把内容复制过去, 注意替换代码里面的port, usr, ip地址
+    ssh-copy-id -i -p **** usr@166.111.*.* 
+    # 这里要输入一次密码
+    ```
+    * 进入目标服务器
+    ```bash
+    # 修改目标服务器的文件权限
+    chmod 700 ~
+    chmod 700 ~/.ssh
+    chmod 600 ~/.ssh/authorized_keys
+    # 应该就可以在本机直接登录了, 这时运行
+    ssh -p **** usr@166.111.*.*
+    # 会发现不用输入密码
+    ```
+
+* 修改密码为随机乱码
+    * 在随机密码生成器网站生成随机密码
+    * 在服务器用passwd改密码就行
+    * 【可选】禁用密码登录, 
+        * root用户进入/etc/ssh/sshd_config, 按照相应步骤修改即可
+        
+* 以termius为例, 怎么使用私钥登录
+    * 有两种情况, 第一可以直接在termius的local terminal输入ssh登录
+      ![img](/assets/images/2018-05-09-linux.md/1.png)
+    
+    * 第二种, 可以在setting -> Keychain -> New Key -> File中选中~/.ssh/id_rsa, 保存后就会有一个叫id_rsa的key
+      ![img](/assets/images/2018-05-09-linux.md/2.png)
+
+    * 然后回主页面, host -> New Host里, 正常填ip, port, username, 密码这里点Keys->, 选择id_rsa, 保存再登录就可以了
