--- a/_posts/2022-06-06-50条生理期谣言辨真假.md
+++ b/_posts/2022-06-06-50条生理期谣言辨真假.md
@@ -10,7 +10,7 @@ tags: [bilibili, 生活常识]
 <!-- more -->
 
 <div style="position: relative; padding: 30% 45%;">
-<iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="https://player.bilibili.com/player.html?cid=731300778&aid=726930359&page=1&as_wide=1&high_quality=1&danmaku=1" frameborder="no" scrolling="no"></iframe>
+<iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="https://player.bilibili.com/player.html?cid=731300778&aid=726930359&page=1&as_wide=1&high_quality=1&danmaku=1" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
 </div>
 
 ---
