--- a/_posts/2022-06-06-50条生理期谣言辨真假.md
+++ b/_posts/2022-06-06-50条生理期谣言辨真假.md
@@ -251,3 +251,9 @@ tags: [bilibili, 生活常识]
 大部分文字识别得还是很准的，但有几类非常容易识别错的内容。一是中医相关词汇，二是条目之间切换的时候，比如“第五条”、“好咱们下一条”这样的，这些地方的断句和识别正确率都很成问题。
 
 另外华为自动生成的字幕是不带时间轴的，只有文字，所以自动时间跳转就很难了，校正文案大概花了40分钟，这个视频25分钟，而且up主普通话非常好，错字其实很少，更多时间花在改断句和排版上了。
+
+<p>
+<div style="position: relative; padding: 30% 45%;">
+<iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="/assets/images/2022-06-06-50条生理期谣言辨真假.md/mm.html" frameborder="1" scrolling="no" allowfullscreen="true"></iframe>
+</div>
+</p>
