--- a/_posts/2022-06-06-50条生理期谣言辨真假.md
+++ b/_posts/2022-06-06-50条生理期谣言辨真假.md
@@ -252,9 +252,4 @@ tags: [bilibili, 生活常识]
 
 另外华为自动生成的字幕是不带时间轴的，只有文字，所以自动时间跳转就很难了，校正文案大概花了40分钟，这个视频25分钟，而且up主普通话非常好，错字其实很少，更多时间花在改断句和排版上了。
 
-<details>
-  <summary><b style='color:#FF7F7F;'>Click to view mindmap!</b></summary>
-<div style="position: relative; padding: 100% 100%; background: #D3D3D3;">
-<iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="/assets/images/2022-06-06-50条生理期谣言辨真假.md/mm.html" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
-</div>
-</details>
+[<b style='color:#FF7F7F;'>Click to view mindmap in a new tab!</b>](/assets/images/2022-06-06-50条生理期谣言辨真假.md/mm.html)
