--- a/_posts/2022-06-06-50条生理期谣言辨真假.md
+++ b/_posts/2022-06-06-50条生理期谣言辨真假.md
@@ -252,4 +252,4 @@ tags: [bilibili, 生活常识]
 
 另外华为自动生成的字幕是不带时间轴的，只有文字，所以自动时间跳转就很难了，校正文案大概花了40分钟，这个视频25分钟，而且up主普通话非常好，错字其实很少，更多时间花在改断句和排版上了。
 
-[<b style='color:#FF7F7F;'>Click to view mindmap in a new tab!</b>](/assets/images/2022-06-06-50条生理期谣言辨真假.md/mm.html)
+[<b style='color:#FF7F7F;'>Click to view mindmap in a new tab!</b>](/assets/images/2022-06-06-50条生理期谣言辨真假.md/mm.html){:target="_blank"}
