--- a/_posts/2022-06-13-摘抄.md
+++ b/_posts/2022-06-13-摘抄.md
@@ -10,6 +10,10 @@ tags:
 <!-- more -->
 
 ---
+# windows里的好软件
+<details>
+<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
+
 即刻 - 长沙刘昊然
 
 * 文件搜索神器：Everything，listary
@@ -34,7 +38,14 @@ tags:
 * 公式截图转换为latex格式：[mathpix](https://accounts.mathpix.com/account){:target="_blank"}
 图片漫画浏览：honeyview
 
+
+</details>
 ---
+# 人生各阶段的宝贵特质
+
+<details>
+<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
+
 即刻 - 十一谧
 
 这个月初，跟一朋友聊了7小时电话，可谓是人生最长通话记录了！原本是想澄清一场误会，但谁知道一下子刹不住车，开出去一万多公里。
@@ -63,10 +74,14 @@ tags:
 
 浮躁 迷茫 不知所措是年轻人常态，在左左右右不断得柺把中，自然会找到生活与自己的一个平衡点，磕磕碰碰，小伤小痛，趁早在年轻时习惯并接受，不然人到中年，挫败感只会更重！适者生存，不适者淘汰，物竞天择，是天道！
 
----
-即刻 - 申悦
+</details>
 
-一些获取数据的途径：
+---
+# 一些获取数据的途径：
+<details>
+<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
+
+即刻 - 申悦
 
 查询国家统计数据：
 * 国家统计局：http://www.stats.gov.cn/
@@ -113,3 +128,51 @@ tags:
 * 360趋势：https://trends.so.com/
 * 阿拉丁指数（小程序趋势）：https://www.aldzs.com/
 * 当然还有了解创投趋势的最佳选择36氪：https://www.36kr.com/
+
+</details>
+
+
+---
+# 富大龙对唯利是图的点评
+
+<details>
+<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
+
+微博 - 富大龙
+
+今天看到一个视频。震惊！
+
+几个中小学孩子殴打一个女孩子，男女轮番折磨，一个比一个狠，都是下死手。
+
+这种残忍，和唐山打女人，其实是一样的！和拐卖妇女儿童的暴虐，是一样的！你继而会发现，车撞人后回头反复碾压，碰瓷老人，疫情中发国难财草菅人命，虐猫虐狗地沟油毒牛奶等等，其实他们都是一样的！仿佛同一个人做出来的！有人说乱象，我认为不乱，只发生了一件事：就是我们的社会已养出了一个暴戾，冷血，不限于性别无视他人，蔑视生命，贪婪卑鄙恶毒的残害践踏他人的怪物。
+
+是什么养出成群这些饿鬼饿魔、小孩子未成年都这样暴虐？高科技智能吗？优异起跑线吗还是富养穷养三代出贵族？是唯利是图！随便一个行业，都满满当当“竞争”“奋斗”“成功学”“精英学”后面，写满一个字：钱！
+
+教育就是学校和课本吗？人一生都在成长，彼此“教育”。最大的课堂和老师是社会。文艺不仅是“娱乐圈”，但包括它。文化是一个时代所有社会生活精神物质面的总和。
+
+而多少年来从课堂、书本、广播，影视，网络，集中成一个关键词：流量。在各个行业执掌生杀予夺。流量是什么？！是普世价值是教育文化和美善嘛？不是，是钱！可今天它已坐在了价值观正确的位置上！至少是你说一千道一万它是硬道理的位置上！
+
+钱不是坏东西但我们介意对钱怎么赚怎么用嘛？就只是一味的赚，能拿就拿能抢就抢不在乎过程。让“唯利是图”这个东西做“导师”，教出的学生不是大金链子地痞恶霸还能是什么？
+
+有人说没有科技会亡国；歌女死绝了都无所谓。大喊戏子误国。可张嘴就是“给大爷唱一个”。美在功利主义面前成了“戏子”。那我告诉你，没有这个“戏子”，人类这个物种会消亡（人性消亡就是人这个物种的消亡）。
+
+该反省了！
+
+古人说“熏风自南来兮，以解吾人之愠”是制琴治艺的原因。用非暴力的方式，叫“文化”～“文而化之”。它不同于外部的严刑峻法暴力皮鞭，它是温和柔软的，它不竞争、是安于当下的品读生命的味道。美会根植在身体内部，所以它其实至坚，刀枪杀不破强盗夺不走。这才是文化文艺的起因和终极存在的理由。
+
+审美不产生效益。但产生“人性”。
+
+利的起因是占有。横征暴敛，是家常便饭，所以它的信仰者为达目的必无所不用其极，逆我者亡，随时付诸暴力，以诡诈卑鄙为能事 ，践踏为乐。利欲不会鼓励尊重理解，视怜悯体恤为“妇人之仁”。多年来大批人倡导“暴力美学”。暴力怎么会是美？！他是“过瘾”，过霸道的瘾。
+
+学习，特别学习艺术，不是用来加分的特长和培养人上人。教育必须不是为了盈利是以培养“有人性的人”为目的。有人性的人在哪里都可以把任何工作变成福利。流量数字绝不应该继续成为这个时代的生存健康指标！最接地气当然是性、暴力、不劳而获，窥人阴私，孩子们当然就会追捧富二代的狼性总裁。贪婪你如果鼓动鼓励它，它就成为横征暴敛，用这个最能与好吃懒做共鸣获得认同，如此讨好受众必一本万利。这就是为什么连一些导师为了支持，小红心点赞，都把自己变成了谢大爷赏的“花子”。大家都以“我就是俗人，流氓，宁做真小人”为坦诚，于是就真的遍地真流氓真小人！
+
+不是什么都做不了，少说几句“牛～傻～懵～撕～”减少犀利。上行下效，大师说也许是个性，到了民众孩子就可能成了一生的品格。人必须坚持用美来修行，来表达，必须附庸风雅！想方设法还是得做君子！即使自己缺点满身、被骂是装。起码还是要养出些“诚敬”，哪怕丁点儿“仁慈恻隐”，多了就可以“造次弗离”成为习惯，那是可以改变人性情的。审美决定人的品格直接决定他的生存层次，不是钱和资源！唐山打人者论资源财产他应该是很多人一生奋斗达不到的“人生赢家”和“财富自由者”了。他的生命质量幸福指数是什么，他存在于社会的意义何在？别再见人就归类别人为什么婊了。
+
+除了我们控制不了的。所谓“民风”中，也有每个人我们的言行共同影响可以养成的。这绝非无关痛痒，特别对于搞文艺教育的人。
+
+未来老朽的我们，现在不开始惊醒，就会在这些暴力虐待同伴的孩子长大成人组成的社会里，越来越弱势。毋以善小而不为！
+
+富山
+2022夏
+
+</details>
