--- a/_posts/2022-06-13-摘抄.md
+++ b/_posts/2022-06-13-摘抄.md
@@ -11,8 +11,6 @@ tags:
 
 ---
 # windows里的好软件
-<details>
-<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
 
 即刻 - 长沙刘昊然
 
@@ -39,12 +37,9 @@ tags:
 图片漫画浏览：honeyview
 
 
-</details>
 ---
 # 人生各阶段的宝贵特质
 
-<details>
-<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
 
 即刻 - 十一谧
 
@@ -74,12 +69,9 @@ tags:
 
 浮躁 迷茫 不知所措是年轻人常态，在左左右右不断得柺把中，自然会找到生活与自己的一个平衡点，磕磕碰碰，小伤小痛，趁早在年轻时习惯并接受，不然人到中年，挫败感只会更重！适者生存，不适者淘汰，物竞天择，是天道！
 
-</details>
 
 ---
-# 一些获取数据的途径：
-<details>
-<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
+# 一些获取数据的途径
 
 即刻 - 申悦
 
@@ -129,14 +121,10 @@ tags:
 * 阿拉丁指数（小程序趋势）：https://www.aldzs.com/
 * 当然还有了解创投趋势的最佳选择36氪：https://www.36kr.com/
 
-</details>
 
 
 ---
 # 富大龙对唯利是图的点评
-
-<details>
-<summary><b style='color:#FF7F7F;'>Click to view hide content!</b></summary>
 
 微博 - 富大龙
 
@@ -174,5 +162,3 @@ tags:
 
 富山
 2022夏
-
-</details>
