--- a/_posts/2022-06-13-摘抄.md
+++ b/_posts/2022-06-13-摘抄.md
@@ -162,3 +162,9 @@ tags:
 
 富山
 2022夏
+
+# 细胞的死法
+
+[原文](https://mp.weixin.qq.com/s/Ja5FljpRfVsdZ2_2Df4xJA)
+
+介绍了细胞凋亡（apoptosis）、细胞自噬（Autophagy）、失巢凋亡（Anoikis）、铁死亡（Ferropotosis)、吞噬死亡（Phagocytosis）、免疫杀伤（immune killing）、细胞坏死（Necrosis）、有丝分裂的灾难性死亡（Mitotic catastrophe）、细胞套亡（Entosis）、兴奋性中毒（Excitotoxicity）、坏死性凋亡（Necroptosis）、细胞焦亡（Pyroptosis）、细胞胀亡（Oncosis）、副凋亡（Paraptosis）、流产凋亡（Aborted Apoptosis）、细胞僵尸（Senescense，"cell zombie"）、细胞角质化（Cornification）、沃勒变性（Wallerian degeneration）
